# PlowWhip_Webv2

./: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  compose.yaml  design-qa.md  pyproject.toml  报告.md
docs/: ACCEPTANCE_MATRIX.md  ARCHITECTURE.md  BUTLER_ARCHITECTURE.md  BUTLER_CONTROL_PLANE_RESULT.md  CODEX_OPTIMIZATION_RESULT.md  CURSOR_POST_OPTIMIZATION_REVIEW.md  ENGINEERING_MODEL_LEDGER.md  ENGINEERING_REQUIREMENTS_AND_INCIDENT_LEDGER.md  FAULT_RUNBOOK.md  MIGRATION_LINEAGE_RECONCILIATION.md  MINIMAL_REDESIGN_BASELINE_V1.zh-CN.md  OPS_TOOLKIT.zh-CN.md  P0_UNATTENDED_BUTLER_VERIFICATION_FAILED.json  PLOW_WHIP_WEB_V2_PRODUCT_REVIEW.html  PRODUCT_LEDGER.zh-CN.md  RELEASE_NOTES.md  RUNBOOK.md  SECURITY_BOUNDARIES.md  SPRINT_0_EVIDENCE.md  SPRINT_10_BUDGET_COMPLETION_GATE_RESULT.md  SPRINT_10_BUDGET_SINGLE_TRUTH_RESULT.md  SPRINT_10_EXECUTION_BUDGET_RUNTIME_RESULT.md  SPRINT_10_FAULT_POLICY_RUNTIME_RESULT.md  SPRINT_10_FINAL_PREDEPLOY_VERIFICATION_RESULT.md  SPRINT_10_HARD_BUDGET_RECHECK_RESULT.md  SPRINT_10_HARD_BUDGET_TERMINAL_RESULT.md  SPRINT_10_HOST_OUTPUT_RESULT.md  SPRINT_10_INDEPENDENT_REVIEW_GATE_RESULT.md  SPRINT_10_LOCAL_DEPLOY_RESULT.md  SPRINT_10_MIGRATION_CONTRACT_RESULT.md  SPRINT_10_PREDEPLOY_VERIFICATION_RESULT.md  SPRINT_10_QUALITY_PROFILE_TRUTH_RESULT.md  SPRINT_10_SIZING_CREATE_RESULT.md  SPRINT_10_SIZING_PERSISTENCE_RESULT.md  SPRINT_10_SIZING_PREVIEW_RESULT.md  SPRINT_10_TASK_ESTIMATION_PLAN.md  SPRINT_10_TASK_PREFLIGHT_SEMANTICS_RESULT.md  SPRINT_10_TASK_PREFLIGHT_UI_RESULT.md  SPRINT_10_TIMEOUT_CONTINUATION_RESULT.md  (+17 more)
(+223 files in other folders)
