[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plow-whip-web"
version = "0.1.0"
description = "Quality-first unattended multi-project AI workflow control plane"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "httpx2>=2,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
]

[project.scripts]
plow-whip-web = "plow_whip_web.__main__:main"
simple-worker = "plow_whip_web.simple_worker:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
plow_whip_web = ["store/migrations/*.sql", "static/*", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
branch = true
source = ["plow_whip_web"]
